# CadQuery-Code-Generator

./: .gitignore  README.md  eval.py  eval_ft.py  fine_tuning.py  pyproject.toml  utils.py
